# pico-fido

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flash_command.sh  logo.h
pico-keys-sdk/: CMakeLists.txt  pico_keys_sdk_import.cmake
pico-keys-sdk/config/esp32/components/pico-keys-sdk/: idf_component.yml
pico-keys-sdk/src/: main.c
pico-keys-sdk/src/fs/: file.c  file.h  flash.c
pico-keys-sdk/src/io/: cardputer_io.cpp  cardputer_io.h  common.h  display.cpp  display.h  keyboard.cpp  keyboard.h
pico-keys-sdk/src/io/Keyboard/: Keyboard.cpp
pico-keys-sdk/src/io/Keyboard/KeyboardReader/: IOMatrix.cpp  TCA8418.cpp
pico-keys-sdk/src/usb/: usb_descriptors.c
workflows/: autobuild.sh
